--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div id="root"></div>
 
     <!-- Vite will replace this with the bundled JS -->
-    <script type="module" src="./app/routes/home.tsx"></script>
+    <script type="module" src="./app/root.tsx"></script>
   </body>
 </html>
